cluster/apps/default/cyberchef/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cyberchef
  namespace: default
  labels:
    app: cyberchef

spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: cyberchef
